fixed invisible avatars

--- a/frontend/src/components/Splash/Splash.css
+++ b/frontend/src/components/Splash/Splash.css
@@ -118,9 +118,7 @@ font-weight: 400;
 line-height: 1.5;
 color: #343a40;
 }
-body img{
-opacity: 50%;
-}
+
 .hotel-container{
 max-width: 45em;
 text-align: left;
